--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/jnorteman91/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "node-spotify-api": "^1.0.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "typescript": "^3.0.3"
   }
 }
